# my-mail-client

./: .gitignore  Cargo.toml  README.md  flake.nix  start.sh
src/: command.rs  db.rs  lib.rs
