[package]
name = "my-mail-client"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = {version = "1.0.217", features = ["derive"]}
serde_json = "1.0.135"
tokio = {version = "1.43.0", features = ["full"]}
sqlx = {version = "0.8.3", features = ["runtime-tokio", "macros", "sqlite", "runtime-tokio-native-tls"]}
anyhow = "1.0.95"
uuid = {version = "1.12.0", features = ["v4"]}